tests/ui/cast/cast-to-bare-fn.stderr
error[E0605]: non-primitive cast: `fn(isize) {foo}` as `extern "C" fn() -> isize`
  --> $DIR/cast-to-bare-fn.rs:5:13
   |
LL |     let x = foo as extern "C" fn() -> isize;
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ invalid cast

error[E0605]: non-primitive cast: `u64` as `fn(isize) -> (isize, isize)`
  --> $DIR/cast-to-bare-fn.rs:7:13
   |
LL |     let y = v as extern "Rust" fn(isize) -> (isize, isize);
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ invalid cast

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0605`.
